chapter 1: Little Red Riding Hood is going to visit her granny with a basket

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Little Red Riding Hood</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section>
+        <h2>Chapter 1:</h2>
+        <div>
+            <p>Little Red Riding Hood lived in a wood with her mother. One
+            day Little Red Riding Hood went to visit her granny. She had
+            a nice cake in her basket.</p>
+        </div>
+    </section>
 </body>
 </html>
