Chapter 2: she goes to the woods and find a wolf.

--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
             a nice cake in her basket.</p>
         </div>
     </section>
+    <section>
+        <h2>Chapter 2:</h2>
+        <div>
+            <p>On her way Little Red Riding Hood met a wolf.
+                ‘Hello!’ said the wolf. ‘Where are you going?’
+                ‘I’m going to see my grandmother. She lives in a house behind those trees.’</p>
+        </div>
+    </section>
 </body>
 </html>
