Chapter 3: The wolf eat Granny and he pass himself off as Granny´s Red Riding Hood

--- a/index.html
+++ b/index.html
@@ -23,5 +23,11 @@
                 ‘I’m going to see my grandmother. She lives in a house behind those trees.’</p>
         </div>
     </section>
+    <section>
+        <h2>Chapter 3:</h2>
+        <div>
+            <p>The wolf ran to Granny’s house and ate Granny up. He got into Granny’s bed.</p>
+        </div>
+    </section>
 </body>
 </html>
