Chapter 4: Red Riding Hood finds something strange in her Granny

--- a/index.html
+++ b/index.html
@@ -29,5 +29,19 @@
             <p>The wolf ran to Granny’s house and ate Granny up. He got into Granny’s bed.</p>
         </div>
     </section>
+    <section>
+        <h2>Chapter 4:</h2>
+        <div>
+            <p>A little later, Little Red Riding Hood reached the house. She looked at the wolf.</p>
+                <p>‘Granny, what big eyes you have!’</p>
+                <p>‘All the better to see you with!’ said the wolf.</p>
+                <p>‘Granny, what big ears you have!’</p>
+                <p>‘All the better to hear you with!’ said the wolf.</p>
+                <p>‘Granny, what a big nose you have!’</p>
+                <p>‘All the better to smell you with!’ said the wolf.</p>
+                <p>‘Granny, what big teeth you have!’</p>
+                <p>‘All the better to eat you with!’ shouted the wolf.</p>
+        </div>
+    </section>
 </body>
 </html>
