A woodcutter heard a loud scream and run to the house

--- a/index.html
+++ b/index.html
@@ -43,5 +43,11 @@
                 <p>‘All the better to eat you with!’ shouted the wolf.</p>
         </div>
     </section>
+    <section>
+        <h2>Chapter 5:</h2>
+        <div>
+            <p>A woodcutter was in the wood. He heard a loud scream and ran to the house.</p>
+        </div>
+    </section>
 </body>
 </html>
