Chapter 6: The woodcutter save them from the wolf

--- a/index.html
+++ b/index.html
@@ -49,5 +49,12 @@
             <p>A woodcutter was in the wood. He heard a loud scream and ran to the house.</p>
         </div>
     </section>
+    <section>
+        <h2>Chapter 6:</h2>
+        <div>
+            <p>The woodcutter hit the wolf over the head. The wolf opened his mouth wide and
+                shouted and Granny jumped out. </p>
+        </div>
+    </section>
 </body>
 </html>
