Chapter 7: The wolf run away and never come back

--- a/index.html
+++ b/index.html
@@ -56,5 +56,11 @@
                 shouted and Granny jumped out. </p>
         </div>
     </section>
+    <section>
+        <h2>Chapter 7:</h2>
+        <div>
+            <p>The wolf ran away and Little Red Riding Hood never saw the wolf again. </p>
+        </div>
+    </section>
 </body>
 </html>
