--- a/index.html
+++ b/index.html
@@ -7,60 +7,68 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
-        <h2>Chapter 1:</h2>
-        <div>
-            <p>Little Red Riding Hood lived in a wood with her mother. One
-            day Little Red Riding Hood went to visit her granny. She had
-            a nice cake in her basket.</p>
-        </div>
-    </section>
-    <section>
-        <h2>Chapter 2:</h2>
-        <div>
-            <p>On her way Little Red Riding Hood met a wolf.
-                ‘Hello!’ said the wolf. ‘Where are you going?’
-                ‘I’m going to see my grandmother. She lives in a house behind those trees.’</p>
-        </div>
-    </section>
-    <section>
-        <h2>Chapter 3:</h2>
-        <div>
-            <p>The wolf ran to Granny’s house and ate Granny up. He got into Granny’s bed.</p>
-        </div>
-    </section>
-    <section>
-        <h2>Chapter 4:</h2>
-        <div>
-            <p>A little later, Little Red Riding Hood reached the house. She looked at the wolf.</p>
-                <p>‘Granny, what big eyes you have!’</p>
-                <p>‘All the better to see you with!’ said the wolf.</p>
-                <p>‘Granny, what big ears you have!’</p>
-                <p>‘All the better to hear you with!’ said the wolf.</p>
-                <p>‘Granny, what a big nose you have!’</p>
-                <p>‘All the better to smell you with!’ said the wolf.</p>
-                <p>‘Granny, what big teeth you have!’</p>
-                <p>‘All the better to eat you with!’ shouted the wolf.</p>
-        </div>
-    </section>
-    <section>
-        <h2>Chapter 5:</h2>
-        <div>
-            <p>A woodcutter was in the wood. He heard a loud scream and ran to the house.</p>
-        </div>
-    </section>
-    <section>
-        <h2>Chapter 6:</h2>
-        <div>
-            <p>The woodcutter hit the wolf over the head. The wolf opened his mouth wide and
-                shouted and Granny jumped out. </p>
-        </div>
-    </section>
-    <section>
-        <h2>Chapter 7:</h2>
-        <div>
-            <p>The wolf ran away and Little Red Riding Hood never saw the wolf again. </p>
-        </div>
-    </section>
-</body>
+    <header>
+        <h1>Little Red Riding Hood</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Chapter 1:</h2>
+            <div>
+                <p>Little Red Riding Hood lived in a wood with her mother. One
+                day Little Red Riding Hood went to visit her granny. She had
+                a nice cake in her basket.</p>
+            </div>
+        </section>
+        <section>
+            <h2>Chapter 2:</h2>
+            <div>
+                <p>On her way Little Red Riding Hood met a wolf.
+                    ‘Hello!’ said the wolf. ‘Where are you going?’
+                    ‘I’m going to see my grandmother. She lives in a house behind those trees.’</p>
+            </div>
+        </section>
+        <section>
+            <h2>Chapter 3:</h2>
+            <div>
+                <p>The wolf ran to Granny’s house and ate Granny up. He got into Granny’s bed.</p>
+            </div>
+        </section>
+        <section>
+            <h2>Chapter 4:</h2>
+            <div>
+                <p>A little later, Little Red Riding Hood reached the house. She looked at the wolf.</p>
+                    <p>‘Granny, what big eyes you have!’</p>
+                    <p>‘All the better to see you with!’ said the wolf.</p>
+                    <p>‘Granny, what big ears you have!’</p>
+                    <p>‘All the better to hear you with!’ said the wolf.</p>
+                    <p>‘Granny, what a big nose you have!’</p>
+                    <p>‘All the better to smell you with!’ said the wolf.</p>
+                    <p>‘Granny, what big teeth you have!’</p>
+                    <p>‘All the better to eat you with!’ shouted the wolf.</p>
+            </div>
+        </section>
+        <section>
+            <h2>Chapter 5:</h2>
+            <div>
+                <p>A woodcutter was in the wood. He heard a loud scream and ran to the house.</p>
+            </div>
+        </section>
+        <section>
+            <h2>Chapter 6:</h2>
+            <div>
+                <p>The woodcutter hit the wolf over the head. The wolf opened his mouth wide and
+                    shouted and Granny jumped out. </p>
+            </div>
+        </section>
+        <section>
+            <h2>Chapter 7:</h2>
+            <div>
+                <p>The wolf ran away and Little Red Riding Hood never saw the wolf again. </p>
+            </div>
+        </section>
+    </body>
+    <footer>
+        Created by Romina Ruiz.
+    </footer>
+</main>
 </html>
