--- a/index.html
+++ b/index.html
@@ -4,38 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Little Red Riding Hood</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
+<body id="background">
     <header>
-        <h1>Little Red Riding Hood</h1>
+        <div id="images__box">
+            <img id="second" alt="little red riding hood scared by the wolf" src="/asserts/red-riding-hood_2.png">
+            <img id="first" alt="little red riding hood chaised by the wolf" src="/asserts/red-riding-hood_1.png">
+        </div>
+            <h1 id="title">LITTLE RED RIDING HOOD</h1>
     </header>
     <main>
         <section>
-            <h2>Chapter 1:</h2>
-            <div>
+            <h2>CHAPTER 1:</h2>
                 <p>Little Red Riding Hood lived in a wood with her mother. One
                 day Little Red Riding Hood went to visit her granny. She had
                 a nice cake in her basket.</p>
-            </div>
         </section>
         <section>
-            <h2>Chapter 2:</h2>
-            <div>
+            <h2> CHAPTER 2:</h2>
                 <p>On her way Little Red Riding Hood met a wolf.
                     ‘Hello!’ said the wolf. ‘Where are you going?’
                     ‘I’m going to see my grandmother. She lives in a house behind those trees.’</p>
-            </div>
         </section>
         <section>
-            <h2>Chapter 3:</h2>
-            <div>
+            <h2> CHAPTER 3:</h2>
                 <p>The wolf ran to Granny’s house and ate Granny up. He got into Granny’s bed.</p>
-            </div>
         </section>
         <section>
-            <h2>Chapter 4:</h2>
-            <div>
+            <h2> CHAPTER 4:</h2>
                 <p>A little later, Little Red Riding Hood reached the house. She looked at the wolf.</p>
                     <p>‘Granny, what big eyes you have!’</p>
                     <p>‘All the better to see you with!’ said the wolf.</p>
@@ -45,26 +42,19 @@
                     <p>‘All the better to smell you with!’ said the wolf.</p>
                     <p>‘Granny, what big teeth you have!’</p>
                     <p>‘All the better to eat you with!’ shouted the wolf.</p>
-            </div>
         </section>
         <section>
-            <h2>Chapter 5:</h2>
-            <div>
+            <h2> CHAPTER 5:</h2>
                 <p>A woodcutter was in the wood. He heard a loud scream and ran to the house.</p>
-            </div>
         </section>
         <section>
-            <h2>Chapter 6:</h2>
-            <div>
+            <h2> CHAPTER 6:</h2>
                 <p>The woodcutter hit the wolf over the head. The wolf opened his mouth wide and
                     shouted and Granny jumped out. </p>
-            </div>
         </section>
         <section>
-            <h2>Chapter 7:</h2>
-            <div>
+            <h2> CHAPTER 7:</h2>
                 <p>The wolf ran away and Little Red Riding Hood never saw the wolf again. </p>
-            </div>
         </section>
     </body>
     <footer>
