feat: main added

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body id="background">
     <header>
-        <div id="images__box">
-            <img id="second" alt="little red riding hood scared by the wolf" src="/asserts/red-riding-hood_2.png">
-            <img id="first" alt="little red riding hood chaised by the wolf" src="/asserts/red-riding-hood_1.png">
-        </div>
-            <h1 id="title">LITTLE RED RIDING HOOD</h1>
+            <div id="images__box">
+                <img id="second" alt="little red riding hood scared by the wolf" src="/asserts/red-riding-hood_2.png">
+                <img id="first" alt="little red riding hood chaised by the wolf" src="/asserts/red-riding-hood_1.png">
+            </div>
+        <h1 id="title">LITTLE <b>RED</b> RIDING HOOD</h1>
     </header>
     <main>
         <section>
@@ -23,13 +23,13 @@
         </section>
         <section>
             <h2> CHAPTER 2:</h2>
-                <p>On her way Little Red Riding Hood met a wolf.
-                    ‘Hello!’ said the wolf. ‘Where are you going?’
-                    ‘I’m going to see my grandmother. She lives in a house behind those trees.’</p>
+                 <p>On her way Little Red Riding Hood met a wolf.
+                ‘Hello!’ said the wolf. ‘Where are you going?’
+                ‘I’m going to see my grandmother. She lives in a house behind those trees.’</p>
         </section>
         <section>
             <h2> CHAPTER 3:</h2>
-                <p>The wolf ran to Granny’s house and ate Granny up. He got into Granny’s bed.</p>
+            <p>The wolf ran to Granny’s house and ate Granny up. He got into Granny’s bed.</p>
         </section>
         <section>
             <h2> CHAPTER 4:</h2>
