feat:main css added with new images

--- a/index.html
+++ b/index.html
@@ -17,44 +17,63 @@
     <main>
         <section>
             <h2>CHAPTER 1:</h2>
-                <p>Little Red Riding Hood lived in a wood with her mother. One
-                day Little Red Riding Hood went to visit her granny. She had
-                a nice cake in her basket.</p>
+            <p>
+                Little Red Riding Hood lived in a wood with her mother. One day Little Red Riding Hood went to visit her granny. She had a nice cake in her basket.
+                <img alt="a mother giving a basket to her daughter" src="/asserts/chapter_1.jpg">
+            </p>
         </section>
         <section>
             <h2> CHAPTER 2:</h2>
-                 <p>On her way Little Red Riding Hood met a wolf.
-                ‘Hello!’ said the wolf. ‘Where are you going?’
-                ‘I’m going to see my grandmother. She lives in a house behind those trees.’</p>
+                <p>On her way Little Red Riding Hood met a wolf.<br><br>
+                - "Hello!"" said the wolf. "Where are you going?"<br><br>
+                -"Im going to see my grandmother. She lives in a house behind those trees."<br>
+                <img alt="a girl talking with a wolf" src="/asserts/chapter_2.jpg">
+                </p>
         </section>
         <section>
             <h2> CHAPTER 3:</h2>
-            <p>The wolf ran to Granny’s house and ate Granny up. He got into Granny’s bed.</p>
+            <p>The wolf ran to Granny’s house and ate Granny up. He got into Granny’s bed. <img alt="a wolf looking inside a house at an old lady" src="/asserts/chapter_3.jpg"><p>
         </section>
         <section>
             <h2> CHAPTER 4:</h2>
-                <p>A little later, Little Red Riding Hood reached the house. She looked at the wolf.</p>
-                    <p>‘Granny, what big eyes you have!’</p>
-                    <p>‘All the better to see you with!’ said the wolf.</p>
-                    <p>‘Granny, what big ears you have!’</p>
-                    <p>‘All the better to hear you with!’ said the wolf.</p>
-                    <p>‘Granny, what a big nose you have!’</p>
-                    <p>‘All the better to smell you with!’ said the wolf.</p>
-                    <p>‘Granny, what big teeth you have!’</p>
-                    <p>‘All the better to eat you with!’ shouted the wolf.</p>
+            <p>A little later, Little Red Riding Hood reached the house. She looked at the wolf.<br>
+            <br>
+            - "Granny, what big eyes you have!"<br>
+            <br>
+            - "All the better to see you with!"
+            said the wolf.<br>
+            <br>
+            - "Granny, what big ears you have!"<br>
+            <br>
+            - "All the better to hear you with!" said the wolf.<br>
+            <br>
+            - "Granny, what a big nose you have!"<br>
+            <br>
+            - "All the better to smell you with!" said the wolf.<br>
+            <br>
+            - "Granny, what big teeth you have!"<br>
+            <br>
+            - "All the better to eat you with!" shouted the wolf.
+            <img alt="a girl talking with a wolf dressed up as a granny" src="/asserts/chapter_4.jpg">
+            </p>
         </section>
         <section>
             <h2> CHAPTER 5:</h2>
-                <p>A woodcutter was in the wood. He heard a loud scream and ran to the house.</p>
+            <p>A woodcutter was in the wood. He heard a loud scream and ran to the house.
+            <img alt="a woodcutter hitting a wolf" src="/asserts/chapter_5.jpg">
+            </p>
         </section>
         <section>
             <h2> CHAPTER 6:</h2>
-                <p>The woodcutter hit the wolf over the head. The wolf opened his mouth wide and
-                    shouted and Granny jumped out. </p>
+            <p>The woodcutter hit the wolf over the head. The wolf opened his mouth wide and shouted and Granny jumped out. 
+            <img alt="a woodcutter hunging the tail of a wolf" src="/asserts/chapter_6.jpg">
+            </p>
         </section>
         <section>
             <h2> CHAPTER 7:</h2>
-                <p>The wolf ran away and Little Red Riding Hood never saw the wolf again. </p>
+            <p>The wolf ran away and Little Red Riding Hood never saw the wolf again. 
+            <img alt="" src="/asserts/chapter_7.jpg">
+            </p>
         </section>
     </body>
     <footer>
